--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
 
             <div class='item'>
-            <h3>TO DO LIST</h3>
+            <a href="/todolist"><h3>TO DO LIST</h3></a>
             </div>
         </div>
     </main>
