--- a/todolist/index.html
+++ b/todolist/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel='stylesheet' type='text/css' href='index.css'>
-    <title>Something</title>
+    <title>TO DO LIST</title>
 </head>
 
 <body>
