--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </main>
 
     <footer>
-        <p>Copyright ⓒ ttaerrim. All rights reserved.</p>
+        <p>Copyright ⓒ <a href="https://github.com/ttaerrim">ttaerrim</a>. All rights reserved.</p>
     </footer>
 </body>
 </html>
