이미지 추가, css 수정

--- a/index.html
+++ b/index.html
@@ -25,11 +25,15 @@
 
         <div class='items'>
             <div class='item'>
-            <a href="/paint"><h3>PAINT</h3></a>
+            <a href="/paint"><h3>PAINT🎨</h3>
+            <img src="static/images/paint.png" alt="paint">
+            </a>
             </div>
 
             <div class='item'>
-            <a href="/todolist"><h3>TO DO LIST</h3></a>
+            <a href="/todolist"><h3>TO DO LIST📝</h3>
+            <img src="static/images/todo.png" alt="todo">
+            </a>
             </div>
         </div>
     </main>
