todolist 안내문 수정

--- a/todolist/index.html
+++ b/todolist/index.html
@@ -12,6 +12,7 @@
     <span class="js-weather weather"></span>
     <div class="center">
     <MARQUEE><p class='notice'>새로 고침 하면 배경이 랜덤으로 바뀌어요</p></MARQUEE>
+    <MARQUEE><p class='notice'>위치 접근 허용하면 온도와 위치가 보여요</p></MARQUEE>
         <div class="js-clock clock">
             <h3>00:00</h3>
         </div>
